Various fixes and optimizations Fix lowercase/uppercase conversions to use root locale Simplify sql storage and queries Fix exceptions caused by immutable collections being incorrectly passed Refactor preset handling